# AR-Glass

./: README.md
3d建模文件/: 眼镜.SLDPRT
代码/: README.md  func_choose.py  gesture_mouse.py  hand_gesture.py  main.py  main_window.py  network_tools.py  phonetic_translation.py  run.sh  test.py  widget_main copy.py  widget_main.py
代码/ar-slave/: hardware.py  network_tools.py
代码/ar-slave/neural_net/onnx/whisper/: whisper.py
代码/ar-slave/neural_net/rknn/ppocr/: ppocr.py
代码/ar-slave/neural_net/rknn/py_utils/: coco_utils.py
代码/ar-slave/neural_net/rknn/yolov5/: yolov5.py
代码/neural_net/cloud/gummy/: gummy.py
代码/neural_net/cloud/translation/: translation.py
代码/neural_net/onnx/whisper/model/: mic_audio.pcm
代码/neural_net/rknn/ppocr/: ppocr.py
代码/neural_net/rknn/ppocr/utils/: db_postprocess.py  operators.py  rec_postprocess.py
代码/neural_net/rknn/py_utils/: rknn_executor.py
代码/neural_net/rknn/whisper/: whisper copy.py  whisper.py
代码/neural_net/rknn/yolov5/: yolov5.py
代码/project/: CMakeLists.txt  run.sh
代码/project/include/: camera.h  invoke_python.h  model.h  shader.h  stb_image.h  stl_reader.h
代码/project/python/: gesture.py  main.py
代码/project/shader-src/: fs.src  vs.src
代码/project/src/: camera.cpp  invoke_python.cpp  main.cpp  model.cpp  shader.cpp  stl_reader.cpp  test.cpp
代码/test/: mediapipetest.py  opencv.py  phonetic_translation.py  phonetic_translation_org.py  rknn.py  rtmp.py  rtsp.py  test copy.py  test.py  udp-receive.py  udp-send.py
